<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:background="@drawable/round_corner_sign_up"
    android:layout_height="400dp">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/light_grey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/close_dialog"
        android:src="@drawable/icons_cancel"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/sing_up_for_theaterears"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/first_name"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey"
            android:layout_weight="50"
            android:id="@+id/first_name">
            <requestFocus/>
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/last_name"
            android:layout_weight="50"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey"
            android:id="@+id/last_name"/>
    </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/grey"
                android:id="@+id/create_password">
                <requestFocus/>
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/warning"
                android:paddingStart="100dp"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/invalid_password"
                android:textColor="@color/backgroundcolor"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey"
            android:id="@+id/confirm_password">
            <requestFocus/>
        </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/warning_confirmpass"
                android:paddingStart="100dp"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/password_did_not_match"
                android:textColor="@color/backgroundcolor"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/user_email">
    <requestFocus/>
        </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/warning_email"
                android:paddingStart="100dp"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/invalid_email"
                android:textColor="@color/backgroundcolor"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/grey"
                android:hint="@string/contact_number"
                android:id="@+id/contact_number">
                <requestFocus/>
            </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/warning_contact"
                    android:paddingStart="100dp"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:text="@string/invalid_contact"
                    android:textColor="@color/backgroundcolor"/>

            </FrameLayout>
        </LinearLayout>
       </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.97"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:background="@drawable/round_corner"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:elevation="5dp"
        android:id="@+id/sign_up_user"/>

</android.support.constraint.ConstraintLayout>