<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/img_bg2_sign_in"
    android:padding="15dp"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        android:src="@drawable/ictelogo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/email_address"
        android:background="@drawable/textborder"
        android:textColor="@color/white"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintVertical_bias="0.23"
        android:id="@+id/email_address"/>
    <com.mindorks.editdrawabletext.EditDrawableText
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:layout_height="40dp"
        android:padding="10dp"
        android:background="@drawable/textborder"
        android:hint="@string/password"
        android:drawableRight="@drawable/icons_hide"
        android:inputType="textPassword"
        android:id="@+id/user_password"
        app:layout_constraintVertical_bias="0.32"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </com.mindorks.editdrawabletext.EditDrawableText>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:id="@+id/sign_in"
        android:background="@drawable/round_corner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.42" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.49"
        android:weightSum="100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/sign_up"
            android:textColor="@color/white"/>
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_weight="95"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.58">
        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:paddingLeft="50dp"
            android:layout_gravity="center"
            android:background="@color/grey"
            android:layout_weight="50"/>
        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="@string/or"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:background="@drawable/text_round_corner"/>
        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/grey"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.65"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:visibility="gone"
        android:id="@+id/sign_up_container"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter contact"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:visibility="gone"
        android:id="@+id/sign_up_container2"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter "/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter "/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter contact"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="myclick"/>
</android.support.constraint.ConstraintLayout>